--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "repository": "https://github.com/chanhy-lee/metube.git",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
