--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
   "license": "MIT",
   "repository": "https://github.com/chanhy-lee/metube.git",
   "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "express": "^4.17.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon --exec babel-node index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
