--- a/package.json
+++ b/package.json
@@ -18,10 +18,6 @@
     "pug": "^3.0.0"
   },
   "scripts": {
-    "reset": "kill -9 $(lsof -t -i:4000)",
-    "start": "nodemon --exec babel-node init.js --delay 2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
+    "start": "babel-node init.js"
   }
 }
