--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "Chan-hyeong Lee <dannychh@khu.ac.kr>",
   "license": "MIT",
   "repository": "https://github.com/chanhy-lee/metube.git",
+  "scripts": {
+    "dev:server": "babel-node init.js",
+    "dev:assets": "gulp dev" 
+  },
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
@@ -20,7 +24,7 @@
     "multer": "^1.4.2",
     "pug": "^3.0.0"
   },
-  "scripts": {
-    "start": "babel-node init.js"
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
