Update package.json and gulpfile.babel.js

--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
   "devDependencies": {
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-sass": "^4.1.0",
     "node-sass": "^5.0.0"
-  }
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
