--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-csso": "^4.0.1",
     "gulp-sass": "^4.1.0",
     "node-sass": "^5.0.0"
   },
